# qt_rtsp_viewer_2

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  csv_replay.py  prompt.txt  windows_build_notes.txt
python/: csv_replay.py  infer_flow.py  offline_flow.py  onvif_test.py  train_flow_NEW.py
res/: resources.qrc
src/: effectssidebar.cpp  effectssidebar.h  main.cpp  mainwindow.cpp  mainwindow.h  motionlogger.cpp  motionlogger.h  motiontracker.cpp  motiontracker.h  onvifclient.cpp  onvifclient.h  onvifsettingsdialog.cpp  onvifsettingsdialog.h  opencvprocessor.cpp  opencvprocessor.h  recorddialog.cpp  recorddialog.h  recordingworker.cpp  recordingworker.h  streamstate.h  streamstatemanager.cpp  streamstatemanager.h  streamtab.cpp  streamtab.h  videoplayer.cpp  videoplayer.h  videoworker.cpp  videoworker.h
